tests/NormalTests/paczka1/small_fuzzy/32795496.err
Error in line 8: T5eOniC A0 31,8
Error in line 10: ?A0
Error in line 12: RvLCqGID A0 94,9
Error in line 15: UXQfJNmC A0 50,9
